[package]
name = "routine"
version = "0.0.1"
authors = ["Christophe Vu-Brugier <cvubrugier@fastmail.fm>"]
description = "Routine is a simple workout timer written in the Rust programming language"
keywords = ["routine", "workout", "timer", "piston"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cvubrugier/routine"
repository = "https://github.com/cvubrugier/routine.git"

[dependencies]
time = "0.1"
piston = "0.1.4"
piston_window = "0.1.0"
piston2d-graphics = "0.1.3"
piston2d-gfx_graphics = "0.1.22"
pistoncore-glutin_window = "0.1.0"
