[package]
name = "routine"
version = "0.0.1"
authors = ["Christophe Vu-Brugier <cvubrugier@fastmail.fm>"]
description = "Routine is a simple workout timer written in the Rust programming language"
keywords = ["routine", "workout", "timer", "piston"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cvubrugier/routine"
repository = "https://github.com/cvubrugier/routine.git"

[dependencies]
getopts = "0.2.11"
time = "0.1"
piston = "0.2"
piston_window = "0.6"
piston2d-graphics = "0.3"
pistoncore-glutin_window = "0.3"
