[package]
name = "routine"
version = "0.0.1"
authors = ["Christophe Vu-Brugier <cvubrugier@fastmail.fm>"]
description = "Routine is a simple workout timer written in the Rust programming language"
keywords = ["routine", "workout", "timer", "piston"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cvubrugier/routine"
repository = "https://github.com/cvubrugier/routine.git"

[dependencies]
getopts = "0.2.14"
time = "0.1.34"
piston = "0.18.0"
piston_window = "0.38.0"
piston2d-graphics = "0.13.1"
pistoncore-glutin_window = "0.21.0"
piston2d-opengl_graphics = "0.23.0"
